refactor: Unified management for form sub-components (#1110)

--- a/src/scss/partial/_form.scss
+++ b/src/scss/partial/_form.scss
@@ -4,3 +4,15 @@ $form-label-width: 168px;
 $form-label-margin-right: 24px;
 $form-input-normal: 256px;
 $form-input-large: 441px;
+$form-input-small: 128px;
+
+$form-label-width: 27.58%;
+
+$form-field-label-font-size: 14px;
+$form-field-label-line-height: 1.125rem;
+$form-field-gap: 1.25rem;
+
+$form-field-main-gap: 1.5rem;
+$form-field-secondary-gap: 0.5rem;
+
+$form-field-label-height: 2rem;
