--- a/src/pages/Dashboard/NotificationServer/index.scss
+++ b/src/pages/Dashboard/NotificationServer/index.scss
@@ -51,27 +51,6 @@
 
 .form {
   padding: 24px;
-  label {
-    display: block;
-    margin-bottom: 8px;
-  }
-  > div {
-    display: flex;
-    margin-bottom: 20px;
-
-    > div {
-      margin-right: 20px;
-    }
-  }
-  .paddingTop {
-    padding-top: 30px;
-  }
-  input {
-    width: 256px;
-  }
-  .smallInput {
-    width: 128px;
-  }
 }
 
 .btnLoading {
@@ -82,6 +61,7 @@
   justify-content: center;
   align-items: center;
   margin-left: 5px;
+  color: $N300;
   :global(.icon) {
     margin-right: 4px;
   }
