--- a/src/components/MenuLayer/index.scss
+++ b/src/components/MenuLayer/index.scss
@@ -18,7 +18,7 @@
     }
 
     & > a {
-      display: block;
+      display: block !important;
       line-height: 32px;
       font-size: 12px;
       font-weight: normal;
