fix: Input width

--- a/src/components/MenuLayer/index.scss
+++ b/src/components/MenuLayer/index.scss
@@ -19,7 +19,7 @@
 
     & > a {
       display: block !important;
-      line-height: 32px;
+      line-height: 32px !important;
       font-size: 12px;
       font-weight: normal;
       color: $N300 !important;
