feat: Add preview and edit package files

--- a/src/pages/Dashboard/Versions/Detail/index.scss
+++ b/src/pages/Dashboard/Versions/Detail/index.scss
@@ -110,6 +110,16 @@
       box-shadow: 0 1px 0 0 $N10;
     }
   }
+
+  .operation {
+    margin-left: 12px;
+  }
+
+  :global {
+    .operate-menu {
+      text-align: left;
+    }
+  }
 }
 
 .updateLog {
