--- a/src/components/MenuIntroduction/index.scss
+++ b/src/components/MenuIntroduction/index.scss
@@ -6,7 +6,6 @@
   top: 100%;
   z-index: 2;
   width: 445px;
-  //height: 184.6px;
   border-radius: 2px;
   background-color: $N0;
 
@@ -49,18 +48,18 @@
     height: 48px;
     line-height: 48px;
     border-radius: 2px;
-    background-color: #eff0f5;
+    background-color: $N10;
 
     .dot {
       display: inline-block;
       width: 6px;
       height: 6px;
       border-radius: 50%;
-      background-color: #d5dae5;
+      background-color: $N30;
       margin-right: 16px;
 
       &.active {
-        background-color: #8454cd;
+        background-color: $P75;
       }
     }
 
@@ -69,7 +68,7 @@
       margin-right: 12px;
       line-height: 20px;
       font-size: 12px;
-      color: #8c96ad;
+      color: $N75;
       text-align: center;
       cursor: pointer;
     }
@@ -89,7 +88,6 @@
   bottom: 0;
   left: 0;
   right: 0;
-  z-index: -1;
   border-radius: 2px;
   background-color: rgba(52, 57, 69, 0.7);
 }
